--- a/src/app/features/landing/components/home/header/header.component.html
+++ b/src/app/features/landing/components/home/header/header.component.html
@@ -17,7 +17,7 @@
       <!-- Navigation -->
       <nav class="hidden md:flex space-x-6">
         <a href="#" class="text-gray-800 hover:text-blue-600 transition-colors duration-300">Inicio</a>
-        <a href="#" class="text-gray-800 hover:text-blue-600 transition-colors duration-300">Cursos</a>
+        <a href="/courses" class="text-gray-800 hover:text-blue-600 transition-colors duration-300">Cursos</a>
         <a href="#" class="text-gray-800 hover:text-blue-600 transition-colors duration-300">Tienda</a>
         <a href="#" class="text-gray-800 hover:text-blue-600 transition-colors duration-300">Nosotros</a>
         <a href="#" class="text-gray-800 hover:text-blue-600 transition-colors duration-300">Contacto</a>
