--- a/src/app/features/landing/components/Courses/index/index.component.html
+++ b/src/app/features/landing/components/Courses/index/index.component.html
@@ -1,1 +1,18 @@
-<p>index works!</p>
+<div class="flex ml-20 mt-2 ">
+    <!-- Contenedor para la imagen y el texto -->
+    <div class="flex flex-col mt-40 mr-8">
+        <!-- Texto debajo de la imagen -->
+        <p class="text-center text-4xl font-semibold  text-primary">Aprende a tocar el acordeón en tan solo 48 horas</p>
+        <p class="text-center text-2xl mt-20 text-secondary leading-relaxed text-justify">
+          Con la plataforma <span class="font-bold">Huellas del Maestro</span> y nuestro avanzado simulador de acordeón 
+          impulsado por inteligencia artificial, dominarás este hermoso instrumento de forma rápida y efectiva. 
+          ¡Descubre el arte de la música al alcance de tus manos!
+        </p>
+    </div>
+      
+    <!-- Contenedor para el modelo 3D -->
+    <div class="flex-grow flex justify-center items-center">
+      <canvas #canvas></canvas>
+    </div>
+</div>
+  
