--- a/src/app/features/landing/components/home/header/header.component.html
+++ b/src/app/features/landing/components/home/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-blue-900 shadow-md">
+<header class="bg-white shadow-md">
     <div class="container mx-auto flex items-center justify-between p-4">
       <!-- Logo -->
       <div class="logo flex-shrink-0">
