--- a/src/app/features/landing/components/home/about/about.component.html
+++ b/src/app/features/landing/components/home/about/about.component.html
@@ -4,78 +4,109 @@
         <h2 class="text-white text-4xl font-bold"></h2>
     </div>
 </div>
+<!-- why us  -->
+<section class="text-gray-700 body-font mt-10">
+    <div class="flex justify-center text-3xl font-bold text-gray-800 text-center">
+        ¿Porque Nosotros?
+    </div>
+    <div class="container px-5 py-12 mx-auto">
+        <div class="flex flex-wrap text-center justify-center">
+            <div class="p-4 md:w-1/4 sm:w-1/2">
+                <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                    <div class="flex justify-center">
+                        <img src="https://image3.jdomni.in/banner/13062021/58/97/7C/E53960D1295621EFCB5B13F335_1623567851299.png?output-format=webp" class="w-32 mb-3">
+                    </div>
+                    <h2 class="title-font font-regular text-2xl text-gray-900">TecnologIA</h2>
+                </div>
+            </div>
 
-<div class="bg-gray-100 p-4 min-h-screen">
-    <div class="max-w-7xl mx-auto h-max px-6 md:px-12 xl:px-6">
+            <div class="p-4 md:w-1/4 sm:w-1/2">
+                <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                    <div class="flex justify-center">
+                        <img src="https://image2.jdomni.in/banner/13062021/3E/57/E8/1D6E23DD7E12571705CAC761E7_1623567977295.png?output-format=webp" class="w-32 mb-3">
+                    </div>
+                    <h2 class="title-font font-regular text-2xl text-gray-900">Precios Accesibles</h2>
+                </div>
+            </div>
+
+            <div class="p-4 md:w-1/4 sm:w-1/2">
+                <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                    <div class="flex justify-center">
+                        <img src="https://image3.jdomni.in/banner/13062021/16/7E/7E/5A9920439E52EF309F27B43EEB_1623568010437.png?output-format=webp" class="w-32 mb-3">
+                    </div>
+                    <h2 class="title-font font-regular text-2xl text-gray-900">Aprende en 48 Hras</h2>
+                </div>
+            </div>
+
+            <div class="p-4 md:w-1/4 sm:w-1/2">
+                <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                    <div class="flex justify-center">
+                        <img src="https://image3.jdomni.in/banner/13062021/EB/99/EE/8B46027500E987A5142ECC1CE1_1623567959360.png?output-format=webp" class="w-32 mb-3">
+                    </div>
+                    <h2 class="title-font font-regular text-2xl text-gray-900">Disponible 24 Hras</h2>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!-- our services section -->
+<section class="py-10" id="services">
+    <div class="container mx-auto px-4">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 items-center">
             <div>
                 <h2 class="my-8 text-2xl font-bold text-black md:text-4xl">¿Por qué aprender con nosotros?</h2>
-                <p class="text-black">
+                <p class="text-black ">
                     En <span class="font-semibold text-blue-600">Huellas del Maestro</span>, no solo aprendes a tocar el acordeón, te sumerges en la rica cultura Vallenata, guiado por los mejores expertos. Nuestro enfoque único combina tradición con tecnología, permitiéndote aprender a tu propio ritmo y con la flexibilidad que necesitas.
                 </p>
             </div>
             <div class="flex justify-center md:justify-end">
                 <a href="https://simulador-acordeon.vercel.app/" target="_blank" rel="noopener noreferrer">
-                    <button class="text-white bg-blue-600 hover:bg-blue-700 transition-colors duration-300 font-semibold py-2 px-4 rounded-lg shadow">
+                    <button class="text-white bg-[#c8a876] hover:bg-blue-900 transition-colors duration-300 font-semibold py-2 px-4 rounded-lg shadow">
                         Conoce nuestro simulador de acordeón
                     </button>
                 </a>
                 
             </div>
         </div>
-
-        <!-- Tarjetas con separación -->
-        <div class="mt-16 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
-            <!-- Tarjeta 1 -->
-            <div class="relative flex flex-col justify-center overflow-hidden bg-transparent py-6 sm:py-12">
-                <div
-                    class="group relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 transition-all duration-300 hover:-translate-y-1 hover:shadow-2xl sm:mx-auto sm:max-w-sm sm:rounded-lg sm:px-10">
-                    <span class="absolute top-10 z-0 h-20 w-20 rounded-full bg-sky-500 transition-all duration-300 group-hover:scale-[10]"></span>
-                    <div class="relative z-10 mx-auto max-w-md">
-                        <span class="grid h-20 w-20 place-items-center rounded-full bg-sky-500 transition-all duration-300 group-hover:bg-white text-4xl">
-                            🪗
-                        </span>
-                        <div class="space-y-6 pt-5 text-base leading-7 text-gray-600 transition-all duration-300 group-hover:text-white/90">
-                            <p>Aprende directamente de los mejores músicos y maestros del Vallenato, con décadas de experiencia y pasión por la enseñanza.</p>
-                        </div>
-                    </div>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-8">
+            
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <img src="https://elpilon.com.co/wp-content/uploads/2016/12/CORONA-REY-DE-REYESJOAQUIN-RAMIREZ.jpg" alt="wheat flour grinding"
+                    class="w-full h-64 object-cover">
+                <div class="p-6 text-center">
+                    <h3 class="text-xl font-medium text-gray-800 mb-2">Instruido por un Rey Vallenato</h3>
+                    <p class="text-gray-700 text-base text-justify">Aprende directamente de un pionero y uno de los mejores acordeoneros de la historia del Vallenato, con décadas de experiencia y pasión por la enseñanza.</p>
                 </div>
             </div>
-
-            <!-- Tarjeta 2 -->
-            <div class="relative flex flex-col justify-center overflow-hidden bg-transparent py-6 sm:py-12">
-                <div
-                    class="group relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 transition-all duration-300 hover:-translate-y-1 hover:shadow-2xl sm:mx-auto sm:max-w-sm sm:rounded-lg sm:px-10">
-                    <span class="absolute top-10 z-0 h-20 w-20 rounded-full bg-sky-500 transition-all duration-300 group-hover:scale-[10]"></span>
-                    <div class="relative z-10 mx-auto max-w-md">
-                        <span class="grid h-20 w-20 place-items-center rounded-full bg-sky-500 transition-all duration-300 group-hover:bg-white text-4xl">
-                            🕒
-                        </span>
-                        <div class="space-y-6 pt-5 text-base leading-7 text-gray-600 transition-all duration-300 group-hover:text-white/90">
-                            <p>Accede a nuestros cursos cuando y donde quieras. No importa tu ubicación o tu horario, siempre estamos aquí para ti.</p>
-                        </div>
-                    </div>
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <img src="https://huellasdelmaestro.com/wp-content/uploads/2024/01/Banner-2-1024x413.webp" alt="Coffee"
+                    class="w-full h-64 object-cover">
+                <div class="p-6 text-center">
+                    <h3 class="text-xl font-medium text-gray-800 mb-2">Aprender nunca habia sido tan facil</h3>
+                    <p class="text-gray-700 text-base">Con la plataforma Huellas del Maestro, niños, niñas y jóvenes podrán aprender a tocar el acordeón de manera virtual.</p>
                 </div>
             </div>
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <img src="https://i0.wp.com/guajiranews.com/wp-content/uploads/2022/12/imagen_2022-12-01_182440740.png?resize=800%2C600&ssl=1" alt="Coffee"
+                    class="w-full h-64 object-cover">
+                <div class="p-6 text-center">
+                    <h3 class="text-xl font-medium text-gray-800 mb-2">Se parte de una comunidad</h3>
+                    <p class="text-gray-700 text-base">Únete a una comunidad apasionada que comparte tus mismos intereses, participa en foros, eventos y más.
+                    <!-- <details>
+                        <summary>Read More</summary>
+                        <p>Our jowar flour is also
+                            a good source of protein and fiber, making it a healthy choice for your family.</p>
+                    </details>
+                    </p> -->
 
-            <!-- Tarjeta 3 -->
-            <div class="relative flex flex-col justify-center overflow-hidden bg-transparent py-6 sm:py-12">
-                <div
-                    class="group relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 transition-all duration-300 hover:-translate-y-1 hover:shadow-2xl sm:mx-auto sm:max-w-sm sm:rounded-lg sm:px-10">
-                    <span class="absolute top-10 z-0 h-20 w-20 rounded-full bg-sky-500 transition-all duration-300 group-hover:scale-[10]"></span>
-                    <div class="relative z-10 mx-auto max-w-md">
-                        <span class="grid h-20 w-20 place-items-center rounded-full bg-sky-500 transition-all duration-300 group-hover:bg-white text-4xl">
-                            🤝 
-                        </span>
-                        <div class="space-y-6 pt-5 text-base leading-7 text-gray-600 transition-all duration-300 group-hover:text-white/90">
-                            <p>Únete a una comunidad apasionada que comparte tus mismos intereses, participa en foros, eventos y más.</p>
-                        </div>
-                    </div>
                 </div>
             </div>
+           
+
         </div>
     </div>
-</div>
+</section>
 
 <div class="relative w-full h-16 bg-cover bg-center bg-transparent" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQgpv_X3C4sX6GJsDVOJxhEacgO4SfiG3xvXw&s');">
     <div class="absolute inset-0 bg-black bg-opacity-50 backdrop-blur-md"></div>
