--- a/src/app/features/landing/components/home/hero/hero.component.html
+++ b/src/app/features/landing/components/home/hero/hero.component.html
@@ -12,7 +12,7 @@
             <h1 class="text-white font-medium text-4xl md:text-5xl leading-tight mb-2">Aprende a tocar el acordeón</h1>
             <p class="font-regular text-xl mb-8 mt-4">Huellas del Maestro Plataforma Virtual</p>
             <a href="#contactUs"
-                class="px-6 py-3 bg-[#c8a876] text-white font-medium rounded-full hover:bg-[#c09858] transition duration-200">Contact Us</a>
+                class="px-6 py-3 bg-[#c8a876] text-white font-medium rounded-full hover:bg-[#c09858] transition duration-200">Inscribete</a>
         </div>
     </div>
 </section>
