--- a/src/app/features/landing/components/home/news/news.component.html
+++ b/src/app/features/landing/components/home/news/news.component.html
@@ -35,9 +35,9 @@
         </div>
         
       </div>
-      <div class="mt-8">
+      <!-- <div class="mt-8">
         <a href="#" class="text-blue-600 hover:text-blue-800 font-semibold">Ver más noticias...</a>
-      </div>
+      </div> -->
     </div>
   </section>
   
