--- a/src/app/features/landing/components/home/footer/footer.component.html
+++ b/src/app/features/landing/components/home/footer/footer.component.html
@@ -3,8 +3,7 @@
   <div class="max-w-7xl mx-auto flex justify-between items-center">
     <!-- Logo -->
     <div class="flex items-center">
-      <img src="assets/logo.png" alt="Logo" class="h-10">
-      <span class="ml-2 text-gray-700 font-semibold">HUELLAS DEL MAESTRO</span>
+      <img class="ml-4" src="https://huellasdelmaestro.com/wp-content/uploads/2022/06/logo-1.png" width="150" height="150" alt="">
     </div>
     
     <!-- Barra de búsqueda -->
