--- a/src/app/features/landing/components/Courses/components/header/header.component.html
+++ b/src/app/features/landing/components/Courses/components/header/header.component.html
@@ -1,8 +1,8 @@
-<section class="relative w-full" id="home">
-    <div class="w-full h-auto">
+<section class="relative h-screen w-full" id="home">
+    <div class="absolute inset-0 w-full h-full overflow-hidden">
         <!-- Vimeo Video Embed -->
         <iframe 
-            class="w-full h-auto" 
+            class="absolute inset-0 w-full h-full object-cover" 
             src="https://player.vimeo.com/video/907577960?autoplay=1&amp;playsinline=1&amp;color&amp;autopause=0&amp;loop=0&amp;muted=0&amp;title=0&amp;portrait=1&amp;byline=0#t=0s" 
             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
         </iframe>
