--- a/src/app/features/landing/components/Courses/index/index.component.html
+++ b/src/app/features/landing/components/Courses/index/index.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <app-cursos-destacados></app-cursos-destacados>
 <app-cursos-adicionales></app-cursos-adicionales>
