--- a/src/app/features/landing/components/home/hero/hero.component.html
+++ b/src/app/features/landing/components/home/hero/hero.component.html
@@ -2,7 +2,7 @@
 <section class="relative h-[70vh] flex flex-col items-center justify-center text-center text-white" id="home">
     <div class="video-docker absolute top-0 left-0 w-full h-[70vh] overflow-hidden">
         <!-- Video Embed -->
-        <video class="min-w-full min-h-full absolute object-cover" autoplay loop muted playsinline>
+        <video #heroVideo class="min-w-full min-h-full absolute object-cover" autoplay muted playsinline>
             <source src="assets/video/hero.mp4" type="video/mp4">
             Tu navegador no soporta la reproducción de videos HTML5.
         </video>
@@ -16,44 +16,3 @@
         </div>
     </div>
 </section>
-
-<!-- Styles -->
-<style>
-    .video-docker video {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-
-    .video-docker::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background: rgba(0, 0, 0, 0.6);
-        z-index: 1;
-    }
-
-    /* Custom styles for the text and button */
-    #home h1 {
-        color: #ffffff;
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    }
-
-    #home p {
-        color: #ffffff;
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    }
-
-    #home a {
-        background-color: #c8a876;
-        border: none;
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    }
-
-    #home a:hover {
-        background-color: #c09858;
-    }
-</style>
