--- a/src/app/features/landing/components/home/hero/hero.component.html
+++ b/src/app/features/landing/components/home/hero/hero.component.html
@@ -16,3 +16,45 @@
         </div>
     </div>
 </section>
+
+
+<!-- Styles -->
+<style>
+    .video-docker video {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .video-docker::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.6);
+        z-index: 1;
+    }
+
+    /* Custom styles for the text and button */
+    #home h1 {
+        color: #ffffff;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    #home p {
+        color: #ffffff;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    #home a {
+        background-color: #c8a876;
+        border: none;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    #home a:hover {
+        background-color: #c09858;
+    }
+</style>
