--- a/src/app/features/landing/components/home/hero/hero.component.html
+++ b/src/app/features/landing/components/home/hero/hero.component.html
@@ -2,7 +2,7 @@
 <section class="relative h-[70vh] flex flex-col items-center justify-center text-center text-white" id="home">
     <div class="video-docker absolute top-0 left-0 w-full h-[70vh] overflow-hidden">
         <!-- Video Embed -->
-        <video #heroVideo class="min-w-full min-h-full absolute object-cover" autoplay muted playsinline>
+        <video class="min-w-full min-h-full absolute object-cover" autoplay loop muted playsinline>
             <source src="assets/video/hero.mp4" type="video/mp4">
             Tu navegador no soporta la reproducción de videos HTML5.
         </video>
@@ -16,7 +16,6 @@
         </div>
     </div>
 </section>
-
 
 <!-- Styles -->
 <style>
