--- a/src/app/features/landing/components/Us/us/us.component.html
+++ b/src/app/features/landing/components/Us/us/us.component.html
@@ -1,1 +1,142 @@
-<p>us works!</p>
+<section class="bg-blue-900 text-white py-12">
+    <div class="container mx-auto text-center px-4">
+      <h1 class="text-4xl font-bold mb-4">
+        HUELLAS DEL <span class="text-teal-400">MAESTRO</span>
+      </h1>
+      <p class="text-lg max-w-2xl mx-auto text-justify">
+        Somos una plataforma de educación virtual que tiene como propósito, programas, formación artística, documentos, textos históricos y culturales, conciertos virtuales en vivo, conversatorios con juglares y pensadores vallenatos en formato de contenido digital. Nuestro foco es la enseñanza en la digitación del acordeón diatónico para impulsar la cultura vallenata en nuestro país y el exterior.
+      </p>
+    </div>
+  </section>
+  
+  <section class="py-12 bg-gray-100">
+    <div class="container mx-auto text-center px-4">
+      <h2 class="text-2xl font-bold mb-4">
+        Misión
+      </h2>
+      <p class="text-lg max-w-xl mx-auto">
+        Ser la plataforma por excelencia en la enseñanza del acordeón tradicional, a través de la innovación, dinamismo y acercamiento con los amantes del folclor.
+      </p>
+    </div>
+  </section>
+  
+  <section class="py-10 bg-gray-50 dark:bg-slate-800 sm:py-16 lg:py-24">
+    <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
+        <div class="max-w-xl mx-auto text-center">
+            <p class="text-sm tracking-widest text-blue-600 dark:text-sky-300 font-bold uppercase">Razones para preferirnos</p>
+
+            <h2 class="mt-6 text-3xl font-bold leading-tight text-black dark:text-slate-50 sm:text-4xl lg:text-5xl">Huella del Maestro</h2>
+        </div>
+
+        <div class="grid items-center grid-cols-1 mt-12 gap-y-10 lg:grid-cols-5 sm:mt-20 gap-x-4">
+            <div class="space-y-8 lg:pr-16 xl:pr-24 lg:col-span-2 lg:space-y-12">
+                <div class="flex items-start">
+                    <svg class="flex-shrink-0 text-green-500 w-9 h-9" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z" />
+                    </svg>
+                    <div class="ml-5">
+                        <h3 class="text-xl font-semibold text-black dark:text-slate-50">¡Fácil y práctico!</h3>
+                        <p class="mt-3 text-base text-gray-600 dark:text-slate-300">Todas las canciones están escritas en partituras, si bien no es indispensable saber leer música, esto es de ayuda para las personas que lo pueden hacer.</p>
+                    </div>
+                </div>
+
+                <div class="flex items-start">
+                    <svg class="flex-shrink-0 text-blue-600 w-9 h-9" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                    </svg>
+                    <div class="ml-5">
+                        <h3 class="text-xl font-semibold text-black dark:text-slate-50">Simulador virtual</h3>
+                        <p class="mt-3 text-base text-gray-600 dark:text-slate-300">Creemos un simulador de acordeón virtual vallenato único en la Internet, basados en la ergonomía del acordeón hacia un teclado, el cual te transportará a la experiencia de un acordeón puesto en tu pecho.</p>
+                    </div>
+                </div>
+
+                <div class="flex items-start">
+                    <svg class="flex-shrink-0 text-red-500 w-9 h-9" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+                    </svg>
+                    <div class="ml-5">
+                        <h3 class="text-xl font-semibold text-black dark:text-slate-50">Facilidad de aprendizaje</h3>
+                        <p class="mt-3 text-base text-gray-600 dark:text-slate-300">El estudiante podrá tocar el acordeón desde el teclado de la computadora, en tu tiempo, tu velocidad y desde tu espacio ¡No hay excusa!.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="lg:col-span-3">
+                <img class="w-full rounded-lg shadow-xl" src="https://cdn.rareblocks.xyz/collection/celebration/images/features/7/dashboard-screenshot.png" alt="Dashboard screenshot" />
+            </div>
+        </div>
+    </div>
+</section>
+  <section class="py-12">
+    <div class="container mx-auto text-center px-4">
+      <h2 class="text-2xl font-bold mb-8">
+        Construyendo una comunidad
+      </h2>
+      <div class="flex flex-wrap justify-around">
+        <div class="text-center">
+          <p class="text-3xl font-bold text-blue-900">+6,000</p>
+          <p>personas interesadas.</p>
+        </div>
+        <div class="text-center">
+          <p class="text-3xl font-bold text-blue-900">6</p>
+          <p>cursos disponibles.</p>
+        </div>
+        <div class="text-center">
+          <p class="text-3xl font-bold text-blue-900">+6</p>
+          <p>países con estudiantes registrados.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="py-12 bg-gray-100">
+    <div class="container mx-auto px-4">
+      <h2 class="text-2xl font-bold text-center mb-8">
+        ¿Qué nos diferencia?
+      </h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div class="text-center">
+          <div class="bg-teal-400 p-4 rounded-full inline-block mb-4">
+            <!-- Icono -->
+            <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+            </svg>
+          </div>
+          <p class="font-bold">¡Fácil y práctico!</p>
+          <p>Todas las canciones están escritas en partituras, si bien no es indispensable saber leer música, esto es de ayuda para las personas que lo pueden hacer.</p>
+        </div>
+        <div class="text-center">
+          <div class="bg-teal-400 p-4 rounded-full inline-block mb-4">
+            <!-- Icono -->
+            <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 11c-4.418 0-8-1.79-8-4V5l8 4 8-4v2c0 2.21-3.582 4-8 4z"></path>
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19c-4.418 0-8-1.79-8-4v-2l8 4 8-4v2c0 2.21-3.582 4-8 4z"></path>
+            </svg>
+          </div>
+          <p class="font-bold">Simulador virtual</p>
+          <p>Creemos un simulador de acordeón virtual vallenato único en la Internet, basados en la ergonomía del acordeón hacia un teclado, el cual te transportará a la experiencia de un acordeón puesto en tu pecho.</p>
+        </div>
+        <div class="text-center">
+          <div class="bg-teal-400 p-4 rounded-full inline-block mb-4">
+            <!-- Icono -->
+            <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14v8m0 0H7m5 0h5M4 10V6a1 1 0 011-1h14a1 1 0 011 1v4"></path>
+            </svg>
+          </div>
+          <p class="font-bold">Facilidad de aprendizaje</p>
+          <p>El estudiante podrá tocar el acordeón desde el teclado de la computadora, en tu tiempo, tu velocidad y desde tu espacio ¡No hay excusa!</p>
+        </div>
+        <div class="text-center">
+          <div class="bg-teal-400 p-4 rounded-full inline-block mb-4">
+            <!-- Icono -->
+            <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3"></path>
+            </svg>
+          </div>
+          <p class="font-bold">En tiempo real</p>
+          <p>La tonalidad del simulador virtual permite que el usuario digite en tiempo real e iniciar su proceso formativo.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  
