--- a/src/app/features/landing/components/home/header/header.component.html
+++ b/src/app/features/landing/components/home/header/header.component.html
@@ -15,7 +15,7 @@
         <a routerLink="/Huellas-del-Maestro/home" class="block md:inline-block hover:text-blue-500 px-3 py-3 md:border-none">Inicio</a>
         <a routerLink="/Huellas-del-Maestro/courses" class="block md:inline-block hover:text-blue-500 px-3 py-3 md:border-none">Cursos</a>
         <a routerLink="/Huellas-del-Maestro/tienda" class="block md:inline-block hover:text-blue-500 px-3 py-3 md:border-none">Tienda</a>
-        <a routerLink="/Huellas-del-Maestro/nosotros" class="block md:inline-block hover:text-blue-500 px-3 py-3 md:border-none">Nosotros</a>
+        <a routerLink="/Huellas-del-Maestro/us" class="block md:inline-block hover:text-blue-500 px-3 py-3 md:border-none">Nosotros</a>
         <a routerLink="/Huellas-del-Maestro/contacto" class="block md:inline-block hover:text-blue-500 px-3 py-3 md:border-none">Contacto</a>
         <a routerLink="/Huellas-del-Maestro/fundacion" class="block md:inline-block hover:text-blue-500 px-3 py-3 md:border-none">Fundación</a>
         <a routerLink="/Huellas-del-Maestro/museo" class="block md:inline-block hover:text-blue-500 px-3 py-3 md:border-none">Museo</a>
