--- a/src/app/features/landing/components/Us/us/us.component.html
+++ b/src/app/features/landing/components/Us/us/us.component.html
@@ -1,4 +1,4 @@
-<section class="bg-blue-900 text-white py-12">
+<!-- <section class="bg-blue-900 text-white py-12">
     <div class="container mx-auto text-center px-4">
       <h1 class="text-4xl font-bold mb-4">
         HUELLAS DEL <span class="text-teal-400">MAESTRO</span>
@@ -18,7 +18,7 @@
         Ser la plataforma por excelencia en la enseñanza del acordeón tradicional, a través de la innovación, dinamismo y acercamiento con los amantes del folclor.
       </p>
     </div>
-  </section>
+  </section> -->
   
   <section class="py-10 bg-gray-50 dark:bg-slate-800 sm:py-16 lg:py-24">
     <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
@@ -62,7 +62,7 @@
             </div>
 
             <div class="lg:col-span-3">
-                <img class="w-full rounded-lg shadow-xl" src="https://cdn.rareblocks.xyz/collection/celebration/images/features/7/dashboard-screenshot.png" alt="Dashboard screenshot" />
+                <img class="w-full h-full rounded-lg shadow-xl" src="assets/images/plataforma.png" alt="Dashboard screenshot" />
             </div>
         </div>
     </div>
