--- a/src/app/features/landing/components/Us/us/us.component.html
+++ b/src/app/features/landing/components/Us/us/us.component.html
@@ -25,7 +25,7 @@
         <div class="max-w-xl mx-auto text-center">
             <p class="text-sm tracking-widest text-blue-600 dark:text-sky-300 font-bold uppercase">Razones para preferirnos</p>
 
-            <h2 class="mt-6 text-3xl font-bold leading-tight text-black dark:text-slate-50 sm:text-4xl lg:text-5xl">Huella del Maestro</h2>
+            <h2 class="mt-6 text-3xl font-bold leading-tight text-black dark:text-slate-50 sm:text-4xl lg:text-5xl">Huellas del Maestro</h2>
         </div>
 
         <div class="grid items-center grid-cols-1 mt-12 gap-y-10 lg:grid-cols-5 sm:mt-20 gap-x-4">
@@ -67,27 +67,28 @@
         </div>
     </div>
 </section>
-  <section class="py-12">
+<section class="py-12">
     <div class="container mx-auto text-center px-4">
       <h2 class="text-2xl font-bold mb-8">
         Construyendo una comunidad
       </h2>
       <div class="flex flex-wrap justify-around">
         <div class="text-center">
-          <p class="text-3xl font-bold text-blue-900">+6,000</p>
+          <p class="text-3xl font-bold text-blue-900" id="peopleCount">0</p>
           <p>personas interesadas.</p>
         </div>
         <div class="text-center">
-          <p class="text-3xl font-bold text-blue-900">6</p>
+          <p class="text-3xl font-bold text-blue-900" id="coursesCount">0</p>
           <p>cursos disponibles.</p>
         </div>
         <div class="text-center">
-          <p class="text-3xl font-bold text-blue-900">+6</p>
+          <p class="text-3xl font-bold text-blue-900" id="countriesCount">0</p>
           <p>países con estudiantes registrados.</p>
         </div>
       </div>
     </div>
   </section>
+  
   
   <section class="py-12 bg-gray-100">
     <div class="container mx-auto px-4">
