--- a/src/app/features/landing/components/Contact/contacts/contacts.component.html
+++ b/src/app/features/landing/components/Contact/contacts/contacts.component.html
@@ -50,11 +50,11 @@
               <p class="flex items-center justify-center text-gray-700">
                 📞 
                 3157384040
-                
+
               </p>
               <p class="flex items-center justify-center text-gray-700">
                 ✉️ 
-                info@huellasdelmaestro.com
+                info&#64;huellasdelmaestro.com
               </p>
             </div>
           </div>
