--- a/src/app/features/landing/components/Fundacion/fundation/fundation.component.html
+++ b/src/app/features/landing/components/Fundacion/fundation/fundation.component.html
@@ -198,3 +198,37 @@
     </div>
   </section>
   
+
+  <section class="py-16 bg-gray-50">
+    <div class="container mx-auto px-6 lg:px-8 text-center">
+      <h2 class="text-3xl font-bold text-gray-800 mb-8">¿Quieres hacer una donación?</h2>
+      
+      <div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-4">
+      
+        <!-- Botones de Donación -->
+        <div class="flex flex-col space-y-4">
+          <!-- Botón PayPal -->
+          <a href="#" class="inline-flex items-center justify-center w-full md:w-auto bg-yellow-500 text-white font-bold py-3 px-6 rounded-md shadow-lg hover:bg-yellow-600 transition duration-300">
+            Donar con <img src="https://www.paypalobjects.com/webstatic/mktg/Logo/pp-logo-100px.png" alt="PayPal" class="ml-2 h-6">
+          </a>
+          <!-- Botón Nequi -->
+          <a href="#" class="inline-flex items-center justify-center w-full md:w-auto bg-purple-500 text-white font-bold py-3 px-6 rounded-md shadow-lg hover:bg-purple-600 transition duration-300">
+            Donar con <img src="assets/images/nq.png" alt="Nequi" class="ml-2 h-6">
+          </a>
+          <!-- Botón Bancolombia -->
+          <a href="#" class="inline-flex items-center justify-center w-full md:w-auto bg-blue-500 text-white font-bold py-3 px-6 rounded-md shadow-lg hover:bg-blue-600 transition duration-300">
+            Donar con <img src="assets/images/bcb.png" alt="Bancolombia" class="ml-2 h-6">
+          </a>
+          <!-- Botón Davivienda -->
+          <a href="#" class="inline-flex items-center justify-center w-full md:w-auto bg-red-500 text-white font-bold py-3 px-6 rounded-md shadow-lg hover:bg-red-600 transition duration-300">
+            Donar con <img src="assets/images/dv.png" alt="Davivienda" class="ml-2 h-8">
+          </a>
+          <!-- Botón Banco de Occidente -->
+          <a href="#" class="inline-flex items-center justify-center w-full md:w-auto bg-teal-400 text-white font-bold py-3 px-6 rounded-md shadow-lg hover:bg-teal-600 transition duration-300">
+            Donar con <img src="assets/images/bco.png" alt="Banco de Occidente" class="ml-2 h-8 mb-2">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  
