--- a/src/app/features/landing/components/Museo/museo/museo.component.html
+++ b/src/app/features/landing/components/Museo/museo/museo.component.html
@@ -44,8 +44,8 @@
 
             <!-- Recorrido Cultural -->
             <div class="flex flex-col items-center bg-gray-800 p-6 rounded-lg shadow-lg">
-                <img src="https://www.diariodelcesar.com/wp-content/uploads/2024/04/EL-MUSEO-1024x681.jpg" alt="Recorrido Cultural" class="w-24 h-24 mb-4">
-                <h3 class="text-2xl font-semibold mb-4">Recorrido Cultural</h3>
+                <img src="https://www.diariodelcesar.com/wp-content/uploads/2024/04/EL-MUSEO-1024x681.jpg" alt="Recorrido Cultural" class="w-46 h-44 mb-4">
+                <h3 class="text-2xl font-semibold mb-4 mt-20">Recorrido Cultural</h3>
                 <p class="text-base mb-6">
                     Recorre nuestras exposiciones y sumérgete en la riqueza cultural que define nuestra identidad. Aprende de la mano de expertos y deja que la cultura te envuelva.
                 </p>
