--- a/src/app/features/landing/components/home/footer/footer.component.html
+++ b/src/app/features/landing/components/home/footer/footer.component.html
@@ -103,7 +103,9 @@
   </div>
   
   <!-- Copyright -->
+ <!-- Créditos -->
   <div class="text-center text-blue-300 mt-8">
-    &copy; Huellas del Maestro | Todos los derechos reservados 2024
+    &copy; Huellas del Maestro 2024 | Desarrollado por el Ingeniero Bryan Percy
   </div>
+
 </footer>
